Refactor components, consistent browser styling, finishing touches for 1.0.0

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
+    <link href="https://fonts.googleapis.com/css?family=Palanquin:300,500" rel="stylesheet">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>pubg.sh</title>
   </head>
   <body>
