--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link href="https://fonts.googleapis.com/css?family=Palanquin:300,500" rel="stylesheet">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="%PUBLIC_URL%/normalize.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/skeleton.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/foundation-icons.css" />
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Palanquin:500" rel="stylesheet">
     <title>pubg.sh</title>
   </head>
   <body>
