Update styling, change recent players to favorite players

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="%PUBLIC_URL%/normalize.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/skeleton.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/main.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/foundation-icons.css" />
-    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600|Palanquin:500|Teko:300" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Teko:300|Nunito:300,400,600" rel="stylesheet" type="text/css">
     <title>pubg.sh</title>
   </head>
   <body>
