--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="theme-color" content="#000000">
+    <meta property="og:url" content="https://pubg.sh" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="pubg.sh: 2D Match Replays" />
+    <meta property="og:description" content="Free in-browser 2D match replays for Playerunknown's Battlegrounds (PUBG)'" />
+    <meta name="description" content="Free in-browser 2D match replays for Playerunknown's Battlegrounds (PUBG)'">
     <link rel="stylesheet" href="%PUBLIC_URL%/normalize.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/main.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/foundation-icons.css" />
     <link href="//fonts.googleapis.com/css?family=Teko:300|Nunito:300,400,600" rel="stylesheet" type="text/css">
-    <title>pubg.sh</title>
+    <title>pubg.sh: 2D Match Replays</title>
   </head>
   <body>
     <noscript>
