Add Twitter meta image tag

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <meta property="og:url" content="https://pubg.sh" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="pubg.sh: 2D Match Replays" />
-    <meta property="og:description" content="Free in-browser 2D match replays for Playerunknown's Battlegrounds (PUBG)'" />
-    <meta name="description" content="Free in-browser 2D match replays for Playerunknown's Battlegrounds (PUBG)'">
+    <meta property="og:image" content="https://pubg.sh/meta-image.png" />
+    <meta property="og:description" content="Free in-browser 2D match replays for Playerunknown's Battlegrounds (PUBG)" />
+    <meta name="twitter:image" content="https://pubg.sh/meta-image.png" />
+    <meta name="description" content="Free in-browser 2D match replays for Playerunknown's Battlegrounds (PUBG)">
     <link rel="stylesheet" href="%PUBLIC_URL%/normalize.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/main.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/foundation-icons.css" />
