--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/foundation-icons.css" />
     <link href="//fonts.googleapis.com/css?family=Teko:300|Nunito:300,400,600" rel="stylesheet" type="text/css">
     <title>pubg.sh: 2D Match Replays</title>
+    <script defer src="https://umami.azzolini.io/script.js" data-website-id="5f3e4dd4-a9aa-429c-99e9-cddbebac6c19"></script>
   </head>
   <body>
     <noscript>
